# kev-new-graph-rag

./: .gitignore  PROJECT_STRUCTURE.md  README.md  check_embeddings.py  config.yaml  docker-compose.yml  kev-graph-rag.code-workspace  kev-new-graph-rag.code-workspace  pyproject.toml  pytest.ini  run_evaluation.md  run_tests.ps1  run_tests.py  test_embedding_config.py  test_embedding_dimensions.py  test_hybrid_search.py
AI DOCS/: genai_in_llamaindex.md  generate-gemini-embedding-exp-03-07-embeddings.md  graphiti_docs.md  graphiti_ingestion_report.md  migrate to genai sdk  misc.md  neo4j_query_table_data_2025-6-15.json  new prd.txt  relates_to_info.json  structured_output_in_gemini.md  thinking.md
CODEING_PROCESS/: README.md
Project Documentation/: buildprogress.md  buildprogress01.md  buildprogress02.md  buildprogress03.md  context.md  context2.md  ensuring_extraction_form.md  example_run_output.txt  expansion_prd.md  google_sdk_memory.md  ignore-master_build_plan.md  ingestionbuildplan.md  kg high level plan.md  kg_extraction_recommendations.md  masterplan_prompt.md  next_steps.md  onboarding_instructions.md  past_plan_exhibit1.md  prd_chat_ui_and_visualization.md  project_understanding.md  queryresearch.md  review.md  startingtounderstandschema.md  understanding_graphiti_extraction.md  understanding_graphiti_search.md  workingwithgenai.md
Workspace/: ai_research_sample.txt  another_text_out_of_gdrive.txt  another_text_out_of_gdrive1.txt  geopolitical_analysis_sample.txt  google_ingest_1.txt  google_ingest_2.txt
debug_output/: llamaparse_output_1Lm0Vu8ef5tbmCSwfS6EQwei0MWVvJWKm_metacodnitive monitoring.json
scripts/: clear_chroma_database.py  clear_neo4j.py  clear_neo4j_database.py  debug_llamaparse_output.py  diagnostic_gemini_test.py  graphiti_advanced_features.py  graphiti_ingest_test.py  hybrid_search.py  (+17 more)
(+75 files in other folders)
